@@ -1,5 +1,5 @@
 ========================================================================
-README for LiDAR Viewer version 2.19
+README for LiDAR Viewer version 2.20
 Copyright (c) 2004-2025 Oliver Kreylos
 ========================================================================
 
@@ -38,9 +38,9 @@ rates.
 Requirements
 ============
 
-LiDAR Viewer requires Vrui version 12.3 build 001 or newer.
+LiDAR Viewer requires Vrui version 13.0 build 001 or newer.
 To work collaboratively, LiDAR Viewer requires the Vrui Collaboration
-Infrastructure, version 10.0 or newer.
+Infrastructure, version 10.2 or newer.
 
 Installation Guide
 ==================
@@ -71,7 +71,7 @@ accounts.
 2. Change into LiDAR Viewer base directory:
    > cd LidarViewer-<version>
 
-3. If the Vrui version installed in step 0 was not 12.3, or Vrui's
+3. If the Vrui version installed in step 0 was not 13.0, or Vrui's
    installation directory was changed from the default of /usr/local,
    adapt the makefile using a text editor. Change the value of
    VRUI_MAKEDIR close to the beginning of the file as follows:
