@@ -1,2 +1,2 @@
-LiDAR Viewer 2.19
-release date 11/13/2024
+LiDAR Viewer 2.20
+release date 03/17/2025
